fix: signature alignment (#969)

--- a/source/sass/component/_signature.scss
+++ b/source/sass/component/_signature.scss
@@ -46,10 +46,6 @@
         grid-area: dates;
     }
 
-    &__dates.c-signature__dates--aligned {
-        padding-left: map-get($spacers, "2" );
-    }
-
     &__published,
     &__updated {
         color: $color-darker;
